# azure-voicelive-support-agent

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  handoff-context-backlog.md  pyproject.toml
docs/: architecture.md  context-strategy.md  handoff-protocol.md  phase-and-slot-design.md  skills-catalog.md
docs/adr/: 0001-monorepo.md  0002-handoff-via-ws-bridge.md  0003-agent-framework-for-skills.md  0004-phase-plus-slot.md  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: HandoffIndicator.css  HandoffIndicator.tsx  PhaseBadge.css  PhaseBadge.tsx  SlotChecklist.css  SlotChecklist.tsx  TranscriptLog.css  TranscriptLog.tsx
services/faultdesk/: .env.example  pyproject.toml
services/faultdesk/app/: __init__.py  config.py  main.py
services/faultdesk/app/adapters/: __init__.py  ai_search.py  cultas.py  sf113.py
services/faultdesk/app/context/: __init__.py  call_log.py  thread_store.py
services/faultdesk/app/orchestrator/: __init__.py  instructions.py  phase_state.py  tools.py
services/faultdesk/app/phases/: __init__.py  definitions.py  transitions.py
services/faultdesk/app/skills/: __init__.py  agent.py  base.py  history.py  identity.py  interview.py  line_test.py  tools.py  (+3 more)
services/frontdesk/: .env.example  pyproject.toml
services/frontdesk/app/: __init__.py  config.py  main.py
services/frontdesk/app/handoff/: __init__.py  manager.py  registry.py
services/frontdesk/app/triage/: __init__.py  instructions.py  tools.py
tests/: README.md
tools/: run-local.ps1
(+11 files in other folders)
