[project]
name = "frontdesk"
version = "0.1.0"
description = "Frontdesk triage and routing service for Azure Voice Live Support Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-json-logger>=3.2.0",
    "voiceshared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
